--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,13 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.py]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.json, *.yaml, *.yml]
+indent_style = space
+indent_size = 4
